textfield: fix rectangular ripple on safari

--- a/components/core/textfield/style.scss
+++ b/components/core/textfield/style.scss
@@ -425,6 +425,7 @@ select.mdw-textfield__input {
     &::after {
       @include mdw-ripple__inner;
       transition-delay: 0s;
+      border-style: none;
     }
     > .mdw-ripple:active > .mdw-ripple__inner,
     &:active::after {
